# magnet--

./: .gitignore  CMakeLists.txt  main.cpp
include/: bencodeParser.hpp  fileWriter.hpp  peer.hpp  torrent.hpp  tracker.hpp
src/: bencodeParser.cpp  fileWriter.cpp  peer.cpp  pieceManager.cpp  tracker.cpp
test/: connect.hpp
